--- a/web/public/index.html
+++ b/web/public/index.html
@@ -497,6 +497,82 @@
             text-align: center;
             border-top: 1px solid #222;
         }
+
+        /* --- Mobile Responsiveness --- */
+        @media (max-width: 768px) {
+            body {
+                height: 100%;
+                overflow-y: auto;
+            }
+
+            header {
+                padding: 0 16px;
+                height: 60px;
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+
+            .brand span {
+                display: none;
+                /* Hide brand text to save space */
+            }
+
+            .controls {
+                gap: 10px;
+                flex: 1;
+                justify-content: flex-end;
+            }
+
+            .search-box {
+                display: none;
+                /* Hide search on mobile for now */
+            }
+
+            .layout {
+                flex-direction: column;
+                height: auto;
+            }
+
+            .player-area {
+                width: 100%;
+                height: 250px;
+                /* Fixed height for video on mobile */
+                min-height: 250px;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                order: -1;
+                /* Ensure player is on top */
+            }
+
+            .sidebar {
+                width: 100% !important;
+                /* Force full width */
+                height: auto;
+                border-right: none;
+                flex: 1;
+            }
+
+            .content-scroll {
+                max-height: none;
+                /* Let the page scroll naturally */
+                overflow: visible;
+            }
+
+            .placeholder-content h1 {
+                font-size: 1.5rem;
+            }
+
+            .placeholder-content p {
+                font-size: 0.9rem;
+                padding: 0 20px;
+            }
+
+            /* Compact stats for mobile */
+            .debug-footer {
+                position: relative;
+            }
+        }
     </style>
 </head>
 
