style: enable search box on mobile

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -513,8 +513,19 @@
             }
 
             .search-box {
-                display: none;
-                /* Hide search on mobile for now */
+                display: block;
+                width: 100%;
+                order: 3;
+                margin-top: 10px;
+            }
+
+            .search-box input {
+                width: 100%;
+                padding: 10px 16px 10px 40px;
+            }
+
+            .search-icon {
+                left: 14px;
             }
 
             .layout {
