style: optimize mobile web header layout and font sizes

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -497,26 +497,30 @@
             header {
                 padding: 0 16px;
                 height: 60px;
-                flex-wrap: wrap;
-                gap: 10px;
+                flex-wrap: nowrap;
+                /* Single row */
+                gap: 0;
             }
 
-            .brand span {
+            .brand {
                 display: none;
-                /* Hide brand text to save space */
+                /* Hide brand completely */
             }
 
             .controls {
+                width: 100%;
                 gap: 10px;
-                flex: 1;
-                justify-content: flex-end;
+                justify-content: space-between;
             }
 
             .search-box {
                 display: block;
-                width: 100%;
-                order: 3;
-                margin-top: 10px;
+                width: auto;
+                flex: 1;
+                /* Maximize search space */
+                order: unset;
+                /* Normal flow */
+                margin-top: 0;
             }
 
             .search-box input {
@@ -566,6 +570,17 @@
             .placeholder-content p {
                 font-size: 0.9rem;
                 padding: 0 20px;
+            }
+
+            /* Compact switch for mobile */
+            .nav-tabs {
+                transform: scale(0.9);
+                transform-origin: right center;
+            }
+
+            .nav-btn {
+                padding: 6px 12px;
+                font-size: 0.95rem;
             }
 
             /* Compact stats for mobile */
