--- a/web/public/index.html
+++ b/web/public/index.html
@@ -509,7 +509,7 @@
 
             .controls {
                 width: 100%;
-                gap: 10px;
+                gap: 6px;
                 justify-content: space-between;
             }
 
@@ -574,12 +574,11 @@
 
             /* Compact switch for mobile */
             .nav-tabs {
-                transform: scale(0.9);
-                transform-origin: right center;
+                /* Removed transform */
             }
 
             .nav-btn {
-                padding: 6px 12px;
+                padding: 6px 8px;
                 font-size: 0.95rem;
             }
 
@@ -830,8 +829,8 @@
                     <div class="channel-info">
                         <div class="channel-name">${item.name}</div>
                         <div class="channel-meta">
+                            ${getStatusHtml(getChannelStatus(item))}
                             <span class="flag-badge">${item.code || 'TV'}</span>
-                            ${statusHtml}
                         </div>
                     </div>
                 `;
@@ -954,6 +953,7 @@
                     const flagImgUrl = countryCode ? `https://flagcdn.com/w40/${countryCode}.png` : '';
 
                     channelItem.innerHTML = `
+                        ${getStatusHtml(getChannelStatus(channelSpecificItem))}
                         ${flagImgUrl ? '<img src="' + flagImgUrl + '" style="width: 20px; height: 15px; border-radius: 2px; flex-shrink: 0;" onerror="this.style.display=\'none\'">' : ''}
                         <span style="color: #fff; font-size: 0.85rem; flex: 1;">${ch.name}</span>
                         <span style="color: #06b6d4; font-size: 0.7rem; text-transform: uppercase;">${ch.code || ''}</span>
@@ -983,6 +983,33 @@
         }
 
         // --- Helpers ---
+        function getChannelStatus(item) {
+            // Priority 1: Item itself has status
+            if (item.status) return item.status.toLowerCase();
+
+            // Priority 2: Lookup in global channels list (fallback)
+            // Try by code first
+            if (item.code) {
+                const found = state.channels.find(c => c.code && c.code.toLowerCase() === item.code.toLowerCase());
+                if (found && found.status) return found.status.toLowerCase();
+            }
+
+            // Try by name
+            if (item.name) {
+                const found = state.channels.find(c => c.name === item.name);
+                if (found && found.status) return found.status.toLowerCase();
+            }
+
+            return 'offline'; // Default
+        }
+
+        function getStatusHtml(status) {
+            const isOnline = status === 'online';
+            return isOnline
+                ? `<span class="status-badge online" style="margin-right:8px;">● Online</span>`
+                : `<span class="status-badge offline" style="margin-right:8px;">○ Offline</span>`;
+        }
+
         function getCountryName(code) {
             const map = {
                 "AD": "Andorra", "AE": "United Arab Emirates", "AF": "Afghanistan", "AG": "Antigua and Barbuda", "AI": "Anguilla", "AL": "Albania", "AM": "Armenia", "AO": "Angola", "AR": "Argentina", "AS": "American Samoa", "AT": "Austria", "AU": "Australia", "AW": "Aruba", "AX": "Åland Islands", "AZ": "Azerbaijan",
