--- a/web/public/index.html
+++ b/web/public/index.html
@@ -869,10 +869,8 @@
                     // Stale check using 'end' date
                     if (item.end) {
                         const endDate = new Date(item.end.replace(' ', 'T')); // Parse "YYYY-MM-DD HH:mm"
-                        // Buffer: Hide if current time is past end time + 15 mins
-                        const diff = (new Date() - endDate) / 1000 / 60; // diff in minutes from now
-                        if (diff > 15) {
-                            // Event ended > 15 mins ago
+                        // Hide immediately if current time is past end time
+                        if (new Date() > endDate) {
                             return false;
                         }
                     } else if (item.start) {
