--- a/web/public/index.html
+++ b/web/public/index.html
@@ -883,9 +883,9 @@
                     return true;
                 }
                 return false;
-            }).sort((a, b) => (a.event.time || '').localeCompare(b.event.time || ''));
+            }).sort((a, b) => (a.event.start || '').localeCompare(b.event.start || ''));
 
-            const upcomingEvents = uniqueEvents.filter(g => g.event.status !== 'live').sort((a, b) => (a.event.time || '').localeCompare(b.event.time || ''));
+            const upcomingEvents = uniqueEvents.filter(g => g.event.status !== 'live').sort((a, b) => (a.event.start || '').localeCompare(b.event.start || ''));
 
             // Render Live Events Section
             if (liveEvents.length > 0) {
