--- a/web/public/index.html
+++ b/web/public/index.html
@@ -650,6 +650,40 @@
             </div>
             <video id="videoPlayer" controls style="display: none;"></video>
 
+            <!-- Player Controls Overlay -->
+            <div id="playerControls"
+                style="position: absolute; top: 16px; right: 16px; display: none; gap: 8px; z-index: 10;">
+                <!-- Picture-in-Picture Button -->
+                <button id="pipBtn" onclick="togglePiP()" title="Picture in Picture" style="
+                    width: 44px; height: 44px; border-radius: 50%; border: none;
+                    background: rgba(0,0,0,0.6); backdrop-filter: blur(10px);
+                    color: white; cursor: pointer; display: flex; align-items: center; justify-content: center;
+                    transition: all 0.2s ease;
+                " onmouseover="this.style.background='rgba(255,255,255,0.2)'"
+                    onmouseout="this.style.background='rgba(0,0,0,0.6)'">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                        <rect x="11" y="9" width="9" height="7" rx="1" fill="currentColor" stroke="none"></rect>
+                    </svg>
+                </button>
+
+                <!-- Chromecast Button -->
+                <button id="castBtn" onclick="openCastDialog()" title="Cast to device" style="
+                    width: 44px; height: 44px; border-radius: 50%; border: none;
+                    background: rgba(0,0,0,0.6); backdrop-filter: blur(10px);
+                    color: white; cursor: pointer; display: flex; align-items: center; justify-content: center;
+                    transition: all 0.2s ease;
+                " onmouseover="this.style.background='rgba(255,255,255,0.2)'"
+                    onmouseout="this.style.background='rgba(0,0,0,0.6)'">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path
+                            d="M2 16.1A5 5 0 0 1 5.9 20M2 12.05A9 9 0 0 1 9.95 20M2 8V6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-6">
+                        </path>
+                        <circle cx="2" cy="20" r="2" fill="currentColor" stroke="none"></circle>
+                    </svg>
+                </button>
+            </div>
+
             <!-- Error Toast (Hidden by default) -->
             <div id="errorToast"
                 style="position: absolute; bottom: 30px; background: #ef4444; color: white; padding: 12px 24px; border-radius: 8px; font-weight: 500; display: none; box-shadow: 0 10px 30px rgba(0,0,0,0.5);">
@@ -1111,6 +1145,9 @@
             els.placeholder.style.display = 'none';
             els.video.style.display = 'block';
 
+            // Show player controls
+            document.getElementById('playerControls').style.display = 'flex';
+
             const showError = (msg) => {
                 const t = document.getElementById('errorToast');
                 t.innerText = msg;
@@ -1141,6 +1178,40 @@
                 }
             } catch (e) {
                 showError("Connection Failed");
+            }
+        }
+
+        // --- Picture-in-Picture ---
+        async function togglePiP() {
+            const video = document.getElementById('videoPlayer');
+            try {
+                if (document.pictureInPictureElement) {
+                    await document.exitPictureInPicture();
+                } else if (document.pictureInPictureEnabled) {
+                    await video.requestPictureInPicture();
+                } else {
+                    alert('Picture-in-Picture not supported in this browser');
+                }
+            } catch (e) {
+                console.error('PiP Error:', e);
+            }
+        }
+
+        // --- Chromecast ---
+        function openCastDialog() {
+            // Check for native Cast API or prompt user
+            if (window.chrome && window.chrome.cast) {
+                // Chrome's native casting - this triggers the browser cast dialog
+                const video = document.getElementById('videoPlayer');
+                if (video.remote && video.remote.state === 'connected') {
+                    video.remote.prompt();
+                } else {
+                    // Fallback: show native browser cast selector
+                    alert('Click the Cast icon in your browser toolbar to cast this video');
+                }
+            } else {
+                // Browser doesn't have Cast API - show instructions
+                alert("To cast: Use your browser's Cast feature (Chrome menu → Cast) or enable Remote Playback in browser settings");
             }
         }
 
